maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:11: error: Boolean(false) does not take parameters
    while ((getDirection != Direction.NORTH && isOverBaggle()==false() )||( isOverBaggle()==false && count != 0)){
                                                                    ^